[package]
name = "buoy_server"
version = "0.1.0"
edition = "2021"
authors = ["JuhyeonKwon <kwonjuhyeon@dxdata.co.kr>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"

mysql = "*"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"


chrono = "0.4"


dotenv = "0.15.0"

[dependencies.redis]
version = "*"